--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Document</title>
 </head>
 <body>
+
+    <footer>
+        This AI project was coded by <a href="https://github.com/simplyshort" target="_blank">Cassy Geroulis</a> and is <a href="https://github.com/simplyshort/joke-generator" targe="_blank">open-sourced on GitHub</a>
+    </footer>
     <script src="javascript/index.js"></script>
 </body>
 </html>
