--- a/index.html
+++ b/index.html
@@ -5,12 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Document</title>
+    <title>AI Poem Generator</title>
 </head>
 <body>
+    <header>
+        <h1> AI Poem Generator</h1>
+    </header>
+
+    <main>
+        <form>
+            <input type="text" placeholder="Enter the topic of the poem" autofocus required autocomplete="off" />
+            <input type="submit" />
+        </form>
+    </main>
+    <div> 
+        As a quiet little seedling
+        <br />
+        Lay within its darksome bed.
+    </div>
 
     <footer>
-        This AI project was coded by <a href="https://github.com/simplyshort" target="_blank">Cassy Geroulis</a> and is <a href="https://github.com/simplyshort/joke-generator" targe="_blank">open-sourced on GitHub</a>
+        This AI project was coded by <a href="https://github.com/simplyshort" target="_blank">Cassy Geroulis</a> and is <a href="https://github.com/simplyshort/joke-generator" targe="_blank">open-sourced on GitHub</a> and is hosted on Netlify.
     </footer>
     <script src="javascript/index.js"></script>
 </body>
