--- a/index.html
+++ b/index.html
@@ -8,22 +8,28 @@
     <title>AI Poem Generator</title>
 </head>
 <body>
-    <header>
-        <h1> AI Poem Generator</h1>
-    </header>
+    <div class="container">
+        <header>
+            <h1> AI Poem Generator</h1>
+        </header>
 
-    <main>
-        <form>
-            <input type="text" placeholder="Enter the topic of the poem" autofocus required autocomplete="off" />
-            <input type="submit" />
-        </form>
-    </main>
-    <div> 
-        As a quiet little seedling
-        <br />
-        Lay within its darksome bed.
+        <main>
+            <form>
+                <input type="text" 
+                placeholder="Enter the topic of the poem" 
+                autofocus 
+                required 
+                autocomplete="off" 
+                class="instructions"/>
+                <input type="submit" class="submit-button" />
+            </form>
+                <div class="poem"> 
+                    As a quiet little seedling
+                    <br />
+                    Lay within its darksome bed.
+                </div>
     </div>
-
+        </main>
     <footer>
         This AI project was coded by <a href="https://github.com/simplyshort" target="_blank">Cassy Geroulis</a> and is <a href="https://github.com/simplyshort/joke-generator" targe="_blank">open-sourced on GitHub</a> and is hosted on Netlify.
     </footer>
