--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <link rel="stylesheet" href="css/styles.css" />
     <title>AI Poem Generator</title>
 </head>
@@ -20,7 +21,9 @@
                 autofocus 
                 required 
                 autocomplete="off" 
-                class="instructions"/>
+                class="instructions"
+                id="user-instructions"
+                />
                 <input type="submit" class="submit-button" />
             </form>
                 <div class="poem" id="poem"></div>
