Changed from poems to jokes

--- a/index.html
+++ b/index.html
@@ -6,30 +6,30 @@
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <link rel="stylesheet" href="css/styles.css" />
-    <title>AI Poem Generator</title>
+    <title>AI Joke Generator</title>
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>AI Poem Generator</h1>
+            <h1>🤣 AI Joke Generator 😜</h1>
         </header>
 
         <main>
             <div class="form-container">
-                <form id="poem-generator-form">
+                <form id="joke-generator-form">
                     <input type="text" 
-                        placeholder="Enter the topic of choice" 
+                        placeholder="Enter the joke topic" 
                         autofocus 
                         required 
                         autocomplete="off" 
                         class="instructions"
                         id="user-instructions" />
-                    <small class="hint">i.e. flowers, sunshine, chocolate...</small> 
+                    <small class="hint">i.e. animals, food, technology...</small> 
                     <input type="submit" class="submit-button" />
                 </form>
             </div>
 
-            <div class="poem hidden" id="poem"></div>
+            <div class="joke hidden" id="joke"></div>
         </main>
 
         <footer>
