--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>AI Joke & Poem Generator✍🏻</h1>
+            <h1>AI Joke & Poem Generator</h1>
         </header>
 
         <main>
